# Web-Novel-to-EPUB

./: .gitignore  README.md  blacklist.txt  main.py  parser.py  pyproject.toml  requirements.txt
parsers/: lightnovelworld.py  readernovel.py  readnovelfull.py  wattpad.py
