[project]
name = "novel-archiver"
version = "0.1.0"
description = "archive stories and web novels from popular websites"
authors = [
    {name = "Lukas D"}
]
requires-python = ">=3.14"
dependencies = ["ebooklib (>=0.20,<0.21)", "beautifulsoup4 (>=4.14.3,<5.0.0)", "modules (>=1.0.0,<2.0.0)", "requests (>=2.32.5,<3.0.0)"]
packages = [{include = "parsers"}, {include = "parser.py"}]

[tool.poetry]
package-mode = false
